[tool.poetry]
name = "webcomix"
version = "3.6.2"
description = "Webcomic downloader"
authors = ["Jean-Christophe Pelletier <pelletierj97@gmail.com>"]
readme = "README.md"
repository = "https://github.com/J-CPelletier/webcomix"
homepage = "https://github.com/J-CPelletier/webcomix"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Framework :: Scrapy",
]
packages = [
    { include = "webcomix" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.1"
tqdm = "^4.43.0"
Scrapy = "^2.5.1"
scrapy-splash = "^0.8.0"
scrapy-fake-useragent = "^1.4.4"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
coveralls = "^3.2.0"
mypy = "^0.910"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
webcomix = "webcomix.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
