[tool.poetry]
name = "webcomix"
version = "3.9.0"
description = "Webcomic downloader"
authors = ["Jean-Christophe Pelletier <pelletierj97@gmail.com>"]
readme = "README.md"
repository = "https://github.com/J-CPelletier/webcomix"
homepage = "https://github.com/J-CPelletier/webcomix"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: Scrapy",
]
packages = [
    { include = "webcomix" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
tqdm = "^4.66.1"
Scrapy = "^2.11.0"
scrapy-splash = "^0.9.0"
scrapy-fake-useragent = "^1.4.4"
pytest-rerunfailures = "^11.1.2"
docker = "^6.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.6.1"
coveralls = "^3.2.0"
mypy = "^1.5.0"
pre-commit = "^2.15.0"
black = "^24.1.1"

[tool.poetry.scripts]
webcomix = "webcomix.cli:cli"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
