[project]
name = "webcomix"
version = "3.12.0"
description = "Webcomic downloader"
authors = [{ name = "Jean-Christophe Pelletier", email = "pelletierj97@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: Scrapy",
]
dependencies = [
    "click>=8.0.0,<9",
    "tqdm>=4.66.1,<5",
    "Scrapy>=2.11.2,<3",
    "scrapy-splash>=0.10.0,<0.11",
    "scrapy-fake-useragent>=1.4.4,<2",
    "pytest-rerunfailures>=11.1.2,<12",
    "docker>=7.1.0,<8",
    "cloudscraper>=1.2.71,<2",
]

[project.urls]
Homepage = "https://github.com/J-CPelletier/webcomix"
Repository = "https://github.com/J-CPelletier/webcomix"

[project.scripts]
webcomix = "webcomix.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.6.1,<4",
    "pytest-xdist>=3.6.1,<4",
    "coveralls>=3.2.0,<4",
    "mypy>=1.5.0,<2",
    "pre-commit>=2.15.0,<3",
    "black>=24.3.0,<25",
]

[tool.hatch.build.targets.sdist]
include = ["webcomix"]

[tool.hatch.build.targets.wheel]
include = ["webcomix"]

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
